Fix white space bug on homepage

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -40,6 +40,7 @@
   height: inherit;
   text-decoration: none;
   flex: 1;
+  white-space: normal;
 }
 
 .home .home-header-container {
